styles/about.css
/* Hero */

#hero > .container {
  overflow: hidden;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 48px;
  padding: 48px 24px 0;
}

#hero > .container > .texts {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

#hero > .container > .texts > .heading_wrapper > h1 {
  width: 255px;
  color: #C5C5C5;
  line-height: 100%;
  /* font-family: var(--sf-pro-display-bold); */
  font-family: 'Inter', sans-serif;
  font-size: 40px;
  font-weight: 700;
}

#hero > .container > .texts > .heading_wrapper > h1:last-child {
  color: #232323;
  font-weight: 700;
}

#hero > .container > .texts > p {
  color: #C5C5C5;
}

#hero > .container > .image_container {
  width: fit-content;
  margin-bottom: -4px;
}

/* Introduction */

#introduction > .container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 48px;
  padding: 80px 24px;
  background-color: var(--black);
}

#introduction > .container > h2 {
  color: #FFF;
  line-height: 160%;
  text-align: center;
  /* font-family: var(--sf-pro-display-bold); */
  font-family: 'Inter', sans-serif;
  font-size: 18px;
  font-weight: 600;
}

/* Work Experience & Education */

#work_experience_and_education > .container {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 64px;
  padding: 64px 24px;
}

#work_experience_and_education > .container .icon {
  width: 32px;
  height: 32px;
}

#work_experience_and_education > .container .header.desktop {
  display: none !important;
}

#work_experience_and_education > .container > div {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 40px;
  width: 100%;
}

#work_experience_and_education > .container > div > h2 {
  /* font-family: var(--sf-pro-display-bold); */
  font-family: 'Inter', sans-serif;
  font-size: 24px;
  font-weight: 700;
}

#work_experience_and_education > .container > div > .container {
  display: flex;
  flex-direction: column;
  gap: 8px;
}

#work_experience_and_education > .container > div > .container > .experience {
  display: flex;
  gap: 16px;
}

#work_experience_and_education > .container > div > .container > .experience > .icon_and_line {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 8px;
}

#work_experience_and_education > .container > div > .container > .experience > .icon_and_line > .line {
  display: inline-block;
  width: 1px;
  height: 100%;
  background-color: #DDD;
}

#work_experience_and_education > .container > div > .container > .experience > .details {
  display: flex;
  flex-direction: column;
  gap: 8px;
  width: 100%;
}

#work_experience_and_education > .container > div > .container > .experience > .details > .header {
  margin-bottom: 16px;
}

#work_experience_and_education > .container > div > .container > .experience > .details > .header,
#work_experience_and_education > .container > div > .container > .experience > .details > .header > div {
  display: flex;
  flex-direction: column;
  gap: 2px;
}

#work_experience_and_education > .container > div > .container > .experience > .details > .header > div > p {
  /* font-family: var(--sf-pro-display-medium); */
  letter-spacing: -0.16px;
  font-size: 14px;
  font-weight: 550;
}

#work_experience_and_education > .container > div > .container > .experience > .details > .header > div > p:last-child,
#work_experience_and_education > .container > div > .container > .experience > .details > .experience > .details > .header > div > p:last-child {
  /* font-family: var(--sf-pro-display-regular); */
  letter-spacing: -0.16px;
  font-weight: 500;
}

#work_experience_and_education > .container > div > .container > .experience > .details > .paragraphs {
  display: flex;
  flex-direction: column;
  gap: 12px;
}

#work_experience_and_education > .container > div > .container > .experience > .details > p,
#work_experience_and_education > .container > div > .container > .experience > .details > .paragraphs > p {
  width: 100%;
  margin-top: -8px;
  padding-bottom: 16px;
  color: #999;
  font-size: 12px;
}

#work_experience_and_education > .container > div > .container > .experience > .details > .paragraphs > p {
  padding-bottom: 12px;
}

#work_experience_and_education > .container > div > .container > .experience > .details > .experience {
  display: flex;
  gap: 16px;
}

#work_experience_and_education > .container > div > .container > .experience > .details > .experience > .icon_and_line {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 8px;
}

#work_experience_and_education > .container > div > .container > .experience > .details > .experience > .icon_and_line > .line {
  display: inline-block;
  width: 1px;
  height: 100%;
  background-color: #EEE;
}

#work_experience_and_education > .container > div > .container > .experience > .details > .experience > .details {
  display: flex;
  flex-direction: column;
  gap: 16px;
  padding-bottom: 16px;
  width: 100%;
}

#work_experience_and_education > .container > div > .container > .experience > .details > .experience > .details > .header,
#work_experience_and_education > .container > div > .container > .experience > .details > .experience > .details > .header > div {
  display: flex;
  flex-direction: column;
  gap: 2px;
}

#work_experience_and_education > .container > div > .container > .experience > .details > .experience > .details > .header > div > p {
  color: #232323;
  /* font-family: var(--sf-pro-display-medium); */
  font-size: 14px;
  font-weight: 550;
}

#work_experience_and_education > .container > div > .container > .experience > .details > .experience > .details > .header > div:last-child > p {
  color: #CCC;
}

#work_experience_and_education > .container > div > .container > .experience > .details > .experience > .details p {
  color: #999;
  line-height: 18px;
  font-size: 12px;
  font-weight: 500;
}
/* ... */

